fixed the loading page so that it overlays the body instead of covering it

--- a/src/todo.scss/components/_spinner.scss
+++ b/src/todo.scss/components/_spinner.scss
@@ -7,6 +7,7 @@
   height: 100vh;
   position: fixed;
   background-color: rgba($background_color, 0.3);
+  opacity: 0.5;
   color: $title_color;
   flex-direction: column;
   justify-content: center;
